fix a text wrapping issue

--- a/assets/style.css
+++ b/assets/style.css
@@ -155,7 +155,7 @@ div.header h1 {
 #recently-updated {
     padding: 10px 0px 0px 30px;
     font-size: 14px;
-    width: 300px;
+    width: 400px;
 }
 
 #recently-updated h1 a {
